<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_activity_title"
        android:padding="@dimen/default_padding"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sample_switch_to_main"
        android:text="@string/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sample_switch_to_progress"
        android:text="@string/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sample_switch_to_placeholder"
        android:text="@string/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sample_switch_to_custom_view"
        android:text="@string/sample_with_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
