<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_view_title"
            android:padding="@dimen/default_padding"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sample_switch_to_main"
            android:text="@string/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sample_switch_to_progress"
            android:text="@string/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sample_switch_to_placeholder"
            android:text="@string/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_margin="@dimen/default_padding"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/sample_switch_to_activity"
            android:text="@string/sample_with_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
